assets/css/custom.css
/* index */
#myphoto{
    border: 2px solid #35447a; /* #0071BC; */
    border-radius: 60%;
    background-color: lightgray;
    float: left;
    padding: 0px;
    margin: 20px 30px 20px 10px;
    max-width: 200px;
}

@media only screen and (max-width: 600px) {
    #myphoto {
        display: block;
        margin-left: auto;
        margin-right: auto;
        float: none;
    }
}

/* About me */
#aboutme {
    padding-top: 0px;
    text-align: justify;
}

#aboutme:after {
    content: "";
    clear: both;
    display: table;
}


/* Time line */
#recent-news {
    font-size: 14px;
    margin-bottom: 40px;
}

#recent-news h2{
    font-size: 20px;
    text-transform: none;
    padding: 3px 7px;
    margin-bottom: 10px;
}
#news ul {
    margin: -25px 0 0 75px;
    padding: 0;
    padding-left: 10px;
    list-style-type: none;
    list-style-position: inside;
    border-left: 2px solid #888;
    min-height: 30px;
}


#news li p:first-child:before {
    content: "- ";
    font-size: 1.2rem;
    color: #888;
}

#news li span{
    margin-left: 5px;
}

#news li{
    margin-bottom: 5px;
    margin-left: 10px;
}


#news li p{
    display: inline;
}

#news h3 {
    color: #888;
    margin: 0px;
    margin-top: 30px;
    margin-left: 30px;
    font-size: 1.7rem;
    font-weight: 900;
}

@media only screen and (max-width: 600px) {
    #news h3{

        font-size: 2em;
        text-align: center;
        padding-bottom: 10px;
    }

    #news ul {
        margin: 0;
        padding: 0;
        padding-left: 5px;
        list-style-type: none;
        list-style-position: inside;
        border-left: 2px solid #888;
        min-height: 30px;
    }
}

/* Research */

.abstract-info {
    background: #FAFAFA;
    padding: 8px;
    border: 1px solid #CCC;
}

/* Pictures of publications */
.publication {
    border: 1px solid #CCC;
    border-radius: 5px;
    overflow:hidden;
    clear: both;
    padding: 15px;
    margin: 10px;
}

.publication .title {
    color: black;
}

.publication .authors, .publication .date, .publication .journal{
    font-size: .9em;
    font-style: oblique;
}

.publication .pics {
    text-align: center;
}

.publication figure {
    float: left;
    margin: 10px;
}

.publication img {
    border: 1px solid #ddd;
    border-radius: 4px;
}

.publication img, .publication figcaption {
    width: 150px;
}

.publication .remark {
    font-size: 1rem;
}

/* Add a hover effect (blue shadow) */
.publication img:hover {
    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
}

.publication figcaption {
    /* font-size: small; */
    /* font-weight: normal; */
    padding-top: 10px;
    text-align: center;
    color: black;
}

.talk-selected{
    background-color:rgba(255,255,0,0.1);
}

/* Highlight a publicaiton when the id is linked to using an anchor? */
:target {
   background-color: #ffa;
}



/* MAPS  */
#recent-talks #map-talks{
    width: 95%;
    margin-left: auto;
    margin-right: auto;
}


/* Map */
#list-talks .column{
    float: left;
    width: 45%;
    margin: 2%;
}


#list-talks p {
    padding: 5px;
    border-radius: 5px;
}

#list-talks p:nth-child(odd) {
    background:#f5f5f5;
}

#map-talks {
height: 200px;
max-width: 100%;
box-shadow: 10px -10px 5px #CCC;
margin: 20px;
}

/* Footer */

footer {
    font-size: .85rem;
    font-style: normal;
    background-color: #fafafa;
    color: #7a7a7a;
    border-color: transparent;
}

